...
            Column(
                modifier =
                    Modifier.weight(1f)
            ) {

                Text(
                    text = "Version History",

                    style =
                        MaterialTheme.typography
                            .headlineSmall,

                    fontWeight =
...
            OutlinedButton(
                onClick =
                    onBack
            ) {

                Text(
                    text = "Back"
                )
            }
        }
    }
}

...
